Fix letter spacing in article titles

--- a/assets/article.sass
+++ b/assets/article.sass
@@ -3,6 +3,9 @@
 $hr-color: $lunar-yellow
 @import article-shared
 
+h1
+    letter-spacing: normal !important
+
 h2
     color: $light-red
 
